--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,44 @@
 
 <body>
     <header class="title">
-        <h1>2023 Guadalcanal Cup</h1>
+        <column></column>
+        
+        <column><h1><b>2023 Guadalcanal Cup</b></h1></column>
+        
+        <column></column>
     </header>
-
+    <hr>
+    <header class="section">
+        <h2>Current Leaderboard</h2>
+    </header>
+        <div class="battalion-holder">
+            <button class="battalion">1-27 IN<br>0🥇0🥈0🥉</button>
+            <button class="battalion">2-27 IN<br>0🥇0🥈0🥉</button>
+            <button class="battalion">2-35 IN<br>0🥇0🥈0🥉</button>
+            <button class="battalion">1-17 IN<br>0🥇0🥈0🥉</button>
+            
+        </div>
+    <hr>
+    <header class="section">
+        <h2>Upcoming Events</h2>
+        <br>
+        <h3>Filter Selection</h3>
+        <select name="Units" id="Unit-Filter">
+            <option value="">--Select Unit--</option>
+        </select>
+        <select name="Events" id="Event-Filter">
+            <option value="">--Select Event--</option>
+        </select>
+    </header>
+        <div class="event-holder">
+            <li class="event">1200 Football Finals<br>1-27 IN vs 3-4 CAV</li>
+            <li class="event">1300 Ultimate Frisbee Finals<br>2-35 IN vs 2-27 IN</li>
+            <li class="event">1400 Combatives Semifinals<br>TBD vs TBD</li>   
+        </div>
+    <hr>
+    <footer>
+        <p>Created by Lightning Labs</p>
+        <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
+    </footer>
 </body>
 </html>
