--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,77 @@
 *{
-    margin: 1em;
-    padding: 1em;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 .title{
     text-align: center;
-    margin: 0;
+    margin: 1em;
     padding: 0;
     color: #FFFFFF;
-    font-size: 3em;
+    font-size: 1.5em;
 }
 
+
 body{
-    background-image: linear-gradient(320deg,#c41e3a, #ffc61e);
+    background-image: linear-gradient(315deg,#c41e3a, #ffc61e); /*Colors of division logo*/
     color: #222222;
     font-family: "Roboto";
-    min-height: 100vh;
+    min-height: 300vh;
+}
+
+.section{
+    text-align: center;
+    margin: 1em;
+    padding: 0;
+    color: #DDDDFF;
+    font-size: 1.5em;
+}
+
+.battalion-holder{
+    padding: 0;
+    margin-left: 20%;
+    margin-right: 20%;
+    justify-content: center;
+}
+
+.battalion{
+    background:rgba(255, 255, 255, 0.35);
+    color:black;
+    font-family:Roboto;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    width:100%;
+    list-style:none;
+}
+
+.event-holder{
+    padding: 0.5rem;
+    margin-left: 20%;
+    margin-right: 20%;
+    justify-content: center;
+}
+
+.event{
+    background:rgba(255, 255, 255, 0.35);
+    color:black;
+    font-family:Roboto;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width:100%;
+    list-style:none;
+}
+
+footer{
+    display: box;
+    margin: 1rem;
+    justify-content: right;
+    text-align: right;
 }
