--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,14 @@
 </head>
 
 <body>
-    <header class="title">
-        <column></column>
-        
-        <column><h1><b>2023 Guadalcanal Cup</b></h1></column>
-        
-        <column></column>
-    </header>
+    <div class="title">
+        <row><h1><b>2023 Guadalcanal Cup</b></h1></row>
+        <row><button>Admin</button></row>
+    </div>
     <hr>
-    <header class="section">
+    <div class="section">
         <h2>Current Leaderboard</h2>
-    </header>
+    </div>
         <div class="battalion-holder">
             <button class="battalion">1-27 IN<br>0🥇0🥈0🥉</button>
             <button class="battalion">2-27 IN<br>0🥇0🥈0🥉</button>
@@ -30,7 +27,7 @@
             
         </div>
     <hr>
-    <header class="section">
+    <div class="section">
         <h2>Upcoming Events</h2>
         <br>
         <h3>Filter Selection</h3>
@@ -40,14 +37,14 @@
         <select name="Events" id="Event-Filter">
             <option value="">--Select Event--</option>
         </select>
-    </header>
+    </div>
         <div class="event-holder">
             <li class="event">1200 Football Finals<br>1-27 IN vs 3-4 CAV</li>
             <li class="event">1300 Ultimate Frisbee Finals<br>2-35 IN vs 2-27 IN</li>
             <li class="event">1400 Combatives Semifinals<br>TBD vs TBD</li>   
         </div>
     <hr>
-    <footer>
+    <footer class="dev-info">
         <p>Created by Lightning Labs</p>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
     </footer>
