--- a/templates/index.html
+++ b/templates/index.html
@@ -20,30 +20,30 @@
         <h2>Current Leaderboard</h2>
     </div>
         <div class="battalion-holder">
-            <button class="battalion">1-27 IN<br>0🥇0🥈0🥉</button>
-            <button class="battalion">2-27 IN<br>0🥇0🥈0🥉</button>
             <button class="battalion">2-35 IN<br>0🥇0🥈0🥉</button>
-            <button class="battalion">1-17 IN<br>0🥇0🥈0🥉</button>
-            
+            <button class="battalion">HHBN<br>0🥇0🥈0🥉</button>
+            <button class="battalion">325 BSB<br>0🥇0🥈0🥉</button>
+            <button class="battalion">2-25 AVN<br>0🥇0🥈0🥉</button>
+            <button class="battalion">1-27 IN<br>0🥇0🥈0🥉</button>
         </div>
     <hr>
-    <div class="section">
-        <h2>Upcoming Events</h2>
-        <br>
-        <h3>Filter Selection</h3>
-        <select name="Units" id="Unit-Filter">
-            <option value="">--Select Unit--</option>
-        </select>
-        <select name="Events" id="Event-Filter">
-            <option value="">--Select Event--</option>
-        </select>
-    </div>
-        <div class="event-holder">
-            <li class="event">1200 Football Finals<br>1-27 IN vs 3-4 CAV</li>
-            <li class="event">1300 Ultimate Frisbee Finals<br>2-35 IN vs 2-27 IN</li>
-            <li class="event">1400 Combatives Semifinals<br>TBD vs TBD</li>   
-        </div>
-    <hr>
+<!--    <div class="section">-->
+<!--        <h2>Upcoming Events</h2>-->
+<!--        <br>-->
+<!--        <h3>Filter Selection</h3>-->
+<!--        <select name="Units" id="Unit-Filter">-->
+<!--            <option value="">&#45;&#45;Select Unit&#45;&#45;</option>-->
+<!--        </select>-->
+<!--        <select name="Events" id="Event-Filter">-->
+<!--            <option value="">&#45;&#45;Select Event&#45;&#45;</option>-->
+<!--        </select>-->
+<!--    </div>-->
+<!--        <div class="event-holder">-->
+<!--            <li class="event">1200 Football Finals<br>1-27 IN vs 3-4 CAV</li>-->
+<!--            <li class="event">1300 Ultimate Frisbee Finals<br>2-35 IN vs 2-27 IN</li>-->
+<!--            <li class="event">1400 Combatives Semifinals<br>TBD vs TBD</li>   -->
+<!--        </div>-->
+<!--    <hr>-->
     <footer class="dev-info">
         <p>Created by Lightning Labs</p>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
