--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,7 @@ body{
     background:rgba(255, 255, 255, 0.35);
     color:black;
     font-family:Roboto;
+    border: none;
     padding: 0.5rem;
     margin: 0.5rem;
     font-size: 1.5rem;
