--- a/static/style.css
+++ b/static/style.css
@@ -53,14 +53,29 @@ body{
     background: rgba(255,255,255,0.7);
 }
 
-    padding: 0.5rem;
-    margin: 0.5rem;
-    font-size: 1.5rem;
-    display: flex;
+.scoreboard{
+    background: rgba(255,255,255,0.35);
+    color: black;
+    border-collapse: collapse;
+}
+
+div.scoreboard{
+    overflow-x: auto;
+    display:flex;
     justify-content: center;
-    text-align: center;
-    width:100%;
-    list-style:none;
+    margin: 0 auto;
+    background:rgba(255,255,255,0);
+}
+
+th.scoreboard-item{
+    border: 1px solid;
+    width: 10rem;
+    padding: 0.5rem;
+}
+
+tr.scoreboard-row:hover{
+    background-color: rgba(255,255,255,0.7);
+    color: #c41e3a;
 }
 
 .dev-info{
