--- a/static/style.css
+++ b/static/style.css
@@ -9,12 +9,13 @@
     margin: 1em;
     padding: 0;
     color: #FFFFFF;
-    font-size: 1.5em;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 
 body{
-    background-image: linear-gradient(315deg,#c41e3a, #ffc61e); /*Colors of division logo*/
+    background-image: linear-gradient(315deg,#c41e3a, #ffc61e); /*Colors of 25ID logo*/
     color: #222222;
     font-family: "Roboto";
     min-height: 300vh;
@@ -76,6 +77,7 @@ th.scoreboard-item{
 tr.scoreboard-row:hover{
     background-color: rgba(255,255,255,0.7);
     color: #c41e3a;
+    font-weight: bold;
 }
 
 .dev-info{
