--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <div class="title">
-        <row><h1><b>2023 Guadalcanal Cup</b></h1></row>
-        <row><button>Admin</button></row>
+        <h1 class>2023 Guadalcanal Cup</h1>
     </div>
     <hr>
     <div class="section">
@@ -50,6 +49,7 @@
     </div>
     <hr>
     <footer class="dev-info">
+        <button class="update-score">Update<br>Score</button>
         <p>Created by Lightning Labs</p>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
     </footer>
