--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
     </div>
     <hr>
     <footer class="dev-info">
-        <button class="update-score">Update<br>Score</button>
+        <a href="{{ url_for('login') }}"><button class="update-score">Update Score</button></a>
         <p>Created by Lightning Labs</p>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
     </footer>
