--- a/templates/login.html
+++ b/templates/login.html
@@ -12,13 +12,13 @@
 <body>
     <div class="title">
         <h4>Enter your login information</h4>
-        <form action="http://localhost:5000/result" method="POST">
-<!--            ensure form action is updated to correct address-->
+        <form action="{{ url_for('edit') }}" method="POST">
             <input type="password" name="password">
             <input type="submit" value="Login">
         </form>
-<!--        TODO: implement login logic-->
+<!--        TODO: add flash message in case of redirect-->
     </div>
+    <hr>
     <footer class="dev-info">
         <p>Created by Lightning Labs</p>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
