--- a/static/style.css
+++ b/static/style.css
@@ -70,13 +70,36 @@ div.scoreboard{
 th.scoreboard-item{
     border: 1px solid;
     width: 10rem;
-    padding: 0.5rem;
+    padding: 0.2rem;
+}
+
+th.scoreboard-emoji{
+    border: 1px solid;
+    width: 10rem;
+    padding-top: 0rem;
+    padding-bottom: 0.2rem;
+    font-size: 200%;
 }
 
 tr.scoreboard-row:hover{
     background-color: rgba(255,255,255,0.7);
     color: #c41e3a;
     font-weight: bold;
+}
+
+td.scoreboard-item{
+    width: 10rem;
+    height: 7rem;
+    padding: 0.2rem;
+}
+
+.update-radio{
+    width: 100%;
+    height: 100%;
+    margin: 0.1rem;
+    padding: 0.1rem;
+    display: block;
+    accent-color: #ffc61e;
 }
 
 button.update-score{
