--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,47 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <!--bootstrap version 4-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Edit</title>
 </head>
 <body>
-    <div class="title">
-        <h4>Upload Scores for {{ event.name }}</h4>
-    </div>
-    <br>
-    <div class="scoreboard">
+    <h4>Upload Scores for<br>{{ event.name }}</h4>
+    <hr>
+    <div class="container-md border border-0">
         <form>
-            <table class="scoreboard">
-                <tr class="scoreboard-header">
-                    <th class="scoreboard-item">Battalion</th>
+            <table class="table table-responsive text-center text-middle">
+                <tr class="table-secondary table-bordered">
+                    <th class="align-middle">Battalion</th>
                 {% for i in range(teamcount) %}
-                    {% if i==0 %}
-                    <th class="scoreboard-emoji">🥇</th>
-                    {% elif i==1 %}
-                    <th class="scoreboard-emoji">🥈</th>
-                    {% elif i==2 %}
-                    <th class="scoreboard-emoji">🥉</th>
-                    {% else %}
-                    <th class="scoreboard-item">{{i+1}}th<br>place</th>
+                    {% if i==0 %}<th>🥇</th>
+                    {% elif i==1 %}<th>🥈</th>
+                    {% elif i==2 %}<th>🥉</th>
+                    {% else %}<th>{{i+1}}th</th>
                     {% endif %}
                 {% endfor %}
                 </tr>
 
                 {% for team in teams %}
-                <tr class="scoreboard-row">
-                    <th class="scoreboard-item">{{ team.name }}</th>
+                <tr class="table-bordered">
+                    <th class="align-middle">{{ team.name }}</th>
                     {% for i in range(teamcount) %}
-                    <td class="scoreboard-item">
-                        <input class="update-radio" type="radio" name="teamID-{{team.id}}">
+                    <td class="align-middle">
+                        <input class="update-radio form-control form-control-lg" type="radio" name="teamID-{{team.id}}-{{i+1}}">
                     </td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
             </table>
-            <input type="submit" value="Submit score for {{event.name}}">
+            <input type="submit" class="btn btn-success" value="Submit score for {{event.name}}">
         </form>
     </div>
 
@@ -52,8 +47,8 @@
 <!--TODO: select what place each team got. Use stylized radio buttons-->
 <!--TODO: submit button, send to database-->
     <hr>
-    <footer class="dev-info">
-        <p>Created by Lightning Labs</p>
+    <footer>
+        <label>Created by Lightning Labs</label>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
     </footer>
 </body>
