--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <h2>Scoreboard</h2>
         <br>
         <div class="container-fluid">
-            <table class="table table-responsive-sm table-striped table-bordered text-center">
+            <table class="table table-sm table-responsive-sm table-striped table-bordered text-center">
                 {% for row in scoreboard %}
                     {% if row[0]=="Teams" %}
                     <tr class="table-primary">
