Centered items, standardized footer to div

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,7 +11,7 @@
     <title>Edit</title>
 </head>
 <body>
-    <h4>Upload Scores for<br>{{ event.name }}</h4>
+<div class="container-md"><h4>Upload Scores for<br>{{ event.name }}</h4></div>
     <hr>
     <div class="container-md border border-0">
         <form>
@@ -47,9 +47,9 @@
 <!--TODO: select what place each team got. Use stylized radio buttons-->
 <!--TODO: submit button, send to database-->
     <hr>
-    <footer>
+    <div class="container-md">
         <label>Created by Lightning Labs</label>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
-    </footer>
+    </div>
 </body>
 </html>
