--- a/templates/login.html
+++ b/templates/login.html
@@ -21,13 +21,11 @@
             </div>
         </form>
     </div>
-<!--TODO: add flash message in case of redirect-->
-<!--refer to: https://www.w3schools.com/bootstrap4/bootstrap_alerts.asp-->
 
     <hr>
-    <footer class="dev-info">
+    <div class="container-md">
         <label>Created by Lightning Labs</label>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a>
-    </footer>
+    </div>
 </body>
 </html>
