--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,7 @@
                     </div>
             </div>
         </form>
+        <!--TODO: Set up database connection-->
     </div>
 
     <div class="container-md">
