--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,30 +14,23 @@
 <div class="container-md"><h4>Upload Scores for<br>{{ event.name }}</h4></div>
     <hr>
     <div class="container-md border border-0">
-        <form action="{{ url_for('submit') }}">
-            <table class="table table-responsive text-center text-middle">
-                <tr class="table-secondary table-bordered">
-                    <th class="align-middle">Battalion</th>
-                {% for i in range(teamcount) %}
-                    {% if i==0 %}<th>🥇</th>
-                    {% elif i==1 %}<th>🥈</th>
-                    {% elif i==2 %}<th>🥉</th>
-                    {% else %}<th>{{i+1}}th</th>
-                    {% endif %}
-                {% endfor %}
-                </tr>
-
+        <form action="{{ url_for('submit') }}" method="POST" id="scores">
+            <input type="email" id="email1">
+            <ul class="container-fluid list-group text-center">
                 {% for team in teams %}
-                <tr class="table-bordered">
-                    <th class="align-middle">{{ team.name }}</th>
-                    {% for i in range(teamcount) %}
-                    <td class="align-middle">
-                        <input class="update-radio form-control" type="radio" id="teamID-{{team.id}}-{{i+1}}">
-                    </td>
-                    {% endfor %}
-                </tr>
+                <li class="list-group-item">
+                    {{ team.name }}
+                    <select class="form-control form-control-sm" id="{{ team.id }}" form_id="scores">
+                        <option value="0">Select placement</option>
+                        {% for placement in placements %}
+
+                        <option value="{{placement[0]}}">{{placement[1]}}</option>
+
+                        {% endfor %}
+                    </select>
+                </li>
                 {% endfor %}
-            </table>
+            </ul>
             <input type="submit" class="btn btn-success" value="Submit score for {{event.name}}">
         </form>
     </div>
