Moved login logic from edit() to login()

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
     {% endwith %}
     </div>
     <div class="container-md">
-        <form action="{{ url_for('edit') }}" method="POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <div class="input-group mb-3">
                 <input type="password" class="form-control" placeholder="Login Code" id="password" name="password">
                     <div class="input-group-append">
