tempfix: flash message in other templates
base.html and submit.html has a temporary flash messaging system. Currently, every message is reported as an error. Will be fixed in future.

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -11,6 +11,17 @@
     <title>Submit</title>
 </head>
 <body>
-    {{ message }}
+    <div class="container-md">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger">
+                    <strong>Error!</strong> {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    </div>
+
 </body>
 </html>
