--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,18 @@
     <title>{% block title %}Title{% endblock %}</title>
 </head>
 <body>
+    <div class="container-md">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger">
+                    <strong>Error!</strong> {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+<!--TODO: flash message with categories https://flask.palletsprojects.com/en/2.3.x/patterns/flashing/-->
+    </div>
     {% block content %}
     {% endblock %}
     <div class="container-md">
