--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <!--bootstrap version 4-->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Guadalcanal Cup 2023</title>
-</head>
-
-<body>
+{% extends "base.html" %}
+{% block title %}Guadalcanal Cup 2023{% endblock %}
+{% block head %}
+  {{ super() }}
+{% endblock %}
+{% block content %}
     <div class="container-fluid">
         <div class="container-md d-flex justify-content-center">
             <label class="display-4 text-center">Guadalcanal Cup 2023</label>
@@ -50,14 +42,5 @@
                 </table>
             </div>
         </div>
-
-        <div class="container-md">
-            <hr>
-            <a href="{{ url_for('login') }}"><button class="btn btn-primary">Upload Score</button></a>
-            <br>
-            <label>Created by Lightning Labs</label>
-            <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a></p>
-        </div>
     </div>
-</body>
-</html>
+{% endblock %}
