--- a/templates/base.html
+++ b/templates/base.html
@@ -18,19 +18,10 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
-                {% if category=="Error" %}
-                <div class="alert alert-danger">
-                    <strong>{{ category }}!</strong> {{ message }}
+                <div class="alert alert-{{category}} alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}
                 </div>
-                {% elif category=="Success" %}
-                <div class="alert alert-success">
-                    <strong>{{ category }}!</strong> {{ message }}
-                </div>
-                {% else %}
-                <div class="alert alert-primary">
-                    <strong>{{ category }}!</strong> {{ message }}
-                </div>
-                {% endif %}
             {% endfor %}
         {% endif %}
     {% endwith %}
