--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,20 @@
     {% endblock %}
 </head>
 <body>
+    <nav class="navbar navbar-expand-md bg-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="static/25ID_Logo.png" width="50" height="50" alt="Lightning Labs">
+        </a>
+        <a class="navbar-brand" href="#">
+            <img src="static/LL_Logo.png" width="50" height="50" alt="Lightning Labs">
+        </a>
+        <a class="navbar-brand" href="#">
+            <img src="static/Guadalcanal_Cup.png" width="50" height="50" alt="Lightning Labs">
+        </a>
+    </nav>
+    <br>
+    <br>
+    <br>
     <br>
     <div class="container-md">
     {% with messages = get_flashed_messages(with_categories=true) %}
