Auto redirect from welcome to home in 0.5 seconds

--- a/templates/Welcome.html
+++ b/templates/Welcome.html
@@ -15,5 +15,10 @@
                 <img src="static/LL_Logo.png" class="img-fluid align-self-center" alt="Lightning Labs">
             </a>
     </div>
+    <script>
+        setTimeout(function() {
+        window.location.href = '{{url_for('home')}}';
+        },500);
+    </script>
 </body>
 </html>
