Dark mode as default
No way to convert between modes at this point

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,18 @@
     <title>{% block title %}Title{% endblock %}</title>
     {% endblock %}
 </head>
-<body>
-    <nav class="navbar navbar-expand-md bg-light fixed-top">
-        <a class="navbar-brand" href="#">
-            <img src="static/25ID_Logo.png" width="50" height="50" alt="Lightning Labs">
+<body class="bg-dark text-light">
+    <nav class="navbar navbar-expand-md bg-secondary fixed-top">
+        <a class="navbar-brand" href="{{url_for('home')}}">
+            <img src="static/Guadalcanal_Cup.png" width="50" height="50" alt="Guadalcanal Cup">
         </a>
         <a class="navbar-brand" href="#">
             <img src="static/LL_Logo.png" width="50" height="50" alt="Lightning Labs">
         </a>
         <a class="navbar-brand" href="#">
-            <img src="static/Guadalcanal_Cup.png" width="50" height="50" alt="Lightning Labs">
+            <img src="static/25ID_Logo.png" width="50" height="50" alt="25th ID">
         </a>
+
     </nav>
     <br>
     <br>
