--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,15 +4,15 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-    <div class="container-md"><h4>Upload Scores for<br>{{ event.name }}</h4></div>
+    <div class="container-md"><h4>Upload Scores for {{ event.name }}</h4></div>
     <hr>
-    <div class="container-md border border-0">
-        <form action="{{ url_for('submit') }}" method="POST">
-            <ul class="container-fluid list-group text-center">
+    <div class="container-md">
+        <form class="form-inline" action="{{ url_for('submit') }}" method="POST">
+            <ul class="container-md list-group text-center">
                 {% for team in teams %}
-                <li class="list-group-item">
-                    <label for="teamid_{{ team.id }}">{{ team.name }}</label>
-                    <select class="form-control form-control-sm" id="teamid_{{ team.id }}" name="teamid_{{ team.id }}">
+                <li class="list-group-item bg-secondary border border-dark">
+                    <label for="teamid_{{ team.id }}" class="mr-sm-2">{{ team.name }}</label>
+                    <select class="form-control form-control-sm form-control mb-2 mr-sm-2" id="teamid_{{ team.id }}" name="teamid_{{ team.id }}">
                         <option value="0">Select placement</option>
                         {% for placement in placements %}
                         <option value="{{placement[0]}}">{{placement[1]}}</option>
