Navbar button for LL redirects to welcome()

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="{{url_for('home')}}">
             <img src="static/Guadalcanal_Cup.png" width="50" height="50" alt="Guadalcanal Cup">
         </a>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{url_for('welcome')}}">
             <img src="static/LL_Logo.png" width="50" height="50" alt="Lightning Labs">
         </a>
         <a class="navbar-brand" href="#">
